--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[profile.dev]
-opt-level = 1
+[profile.dev.package."*"]
+opt-level = 3
 
 [dependencies]
 wasm-bindgen = { version = "0.2" }
 bevy = { version = "0.13" }
+bevy_simple_text_input = { version = "0.6" }
+
+rand = { version = "0.8" }
