--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ opt-level = 3
 [dependencies]
 wasm-bindgen = { version = "0.2" }
 bevy = { version = "0.13" }
-bevy_simple_text_input = { version = "0.6" }
+bevy_simple_text_input = { git = "https://github.com/rparrett/bevy_simple_text_input.git", branch = "latest" }
+
+reqwest-wasm = { version = "0.11", features = ["blocking", "json"] }
+serde = { version = "1.0" }
+serde_json = { version = "1.0" }
 
 rand = { version = "0.8" }
