--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,14 @@ opt-level = 3
 
 [dependencies]
 wasm-bindgen = { version = "0.2" }
+wasm-bindgen-futures = { version = "0.4" }
+web-sys = { version = "0.3" }
+js-sys = { version = "0.3" }
+
 bevy = { version = "0.13" }
 bevy_simple_text_input = { git = "https://github.com/rparrett/bevy_simple_text_input.git", branch = "latest" }
 
-reqwest-wasm = { version = "0.11", features = ["blocking", "json"] }
+
 serde = { version = "1.0" }
 serde_json = { version = "1.0" }
 
