--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,12 @@ opt-level = 3
 
 [dependencies]
 wasm-bindgen = { version = "0.2" }
-wasm-bindgen-futures = { version = "0.4" }
-web-sys = { version = "0.3" }
-js-sys = { version = "0.3" }
 
 bevy = { version = "0.13" }
 bevy_simple_text_input = "0.6.1"
+bevy-wasm-tasks = { version = "0.13" }
 
-
+reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0" }
 serde_json = { version = "1.0" }
 
